--- a/simple.ui
+++ b/simple.ui
@@ -40,7 +40,7 @@
    <property name="geometry">
     <rect>
      <x>70</x>
-     <y>120</y>
+     <y>100</y>
      <width>320</width>
      <height>320</height>
     </rect>
@@ -60,12 +60,15 @@
    <attribute name="horizontalHeaderStretchLastSection">
     <bool>false</bool>
    </attribute>
+   <attribute name="verticalHeaderVisible">
+    <bool>true</bool>
+   </attribute>
   </widget>
   <widget class="QTableWidget" name="mult">
    <property name="geometry">
     <rect>
      <x>410</x>
-     <y>120</y>
+     <y>100</y>
      <width>320</width>
      <height>320</height>
     </rect>
@@ -87,7 +90,7 @@
    <property name="geometry">
     <rect>
      <x>70</x>
-     <y>460</y>
+     <y>440</y>
      <width>320</width>
      <height>320</height>
     </rect>
@@ -109,7 +112,7 @@
    <property name="geometry">
     <rect>
      <x>410</x>
-     <y>460</y>
+     <y>440</y>
      <width>320</width>
      <height>320</height>
     </rect>
@@ -130,14 +133,66 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>230</x>
+     <x>280</x>
      <y>70</y>
-     <width>161</width>
-     <height>31</height>
+     <width>91</width>
+     <height>21</height>
     </rect>
    </property>
    <property name="text">
     <string>характеристика</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>420</y>
+     <width>51</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>сложение</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>550</x>
+     <y>420</y>
+     <width>61</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>умножение</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_4">
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>760</y>
+     <width>61</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>вычитание</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_5">
+   <property name="geometry">
+    <rect>
+     <x>550</x>
+     <y>760</y>
+     <width>61</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>деление</string>
    </property>
   </widget>
  </widget>
